--- a/pom.xml
+++ b/pom.xml
@@ -35,15 +35,27 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-commons-csv</artifactId>
+            <version>3.2.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>commons-validator</groupId>
             <artifactId>commons-validator</artifactId>
-            <version>1.3.1</version>
+            <version>1.4.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>oro</groupId>
             <artifactId>oro</artifactId>
             <version>2.0.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 </project>
