--- a/pom.xml
+++ b/pom.xml
@@ -91,5 +91,10 @@
             <artifactId>opencsv</artifactId>
             <version>2.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
     </dependencies>
 </project>
