--- a/pom.xml
+++ b/pom.xml
@@ -96,5 +96,11 @@
             <artifactId>quartz</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
